--- a/.github/workflows/covid_dist.yaml
+++ b/.github/workflows/covid_dist.yaml
@@ -16,10 +16,10 @@ jobs:
       uses: lc5415/rmarkdown-action@v1
       with: 
         input_file: index.Rmd
-  output_format: html_document
-    - name: Render r plot file
-      run:
-        Rscript -e "source('code/covid_df.R')"
+    output_format: html_document
+    #- name: Render r plot file
+      #run:
+        #Rscript -e "source('code/covid_df.R')"
     - name: Commit results
       run: |
         git config --local user.email "actions@github.com"
