--- a/.github/workflows/covid_dist.yaml
+++ b/.github/workflows/covid_dist.yaml
@@ -4,7 +4,7 @@ on: [push]
 
 jobs:
   build:
-  runs-on: macOS-latest
+  runs-on: ubuntu-latest
   if: "contains(github.event.head_commit.message, 'initial commit')"
   steps:
     - uses: actions/checkout@v2
