--- a/.github/workflows/covid_dist.yaml
+++ b/.github/workflows/covid_dist.yaml
@@ -1,7 +1,10 @@
 name: Render library update
 
-on: [push]
+# on: [push]
 
+on:
+  schedule:
+    - cron: "*/5 * * * *"
 jobs:
   build:
   runs-on: ubuntu-latest
