--- a/.github/workflows/covid_dist.yaml
+++ b/.github/workflows/covid_dist.yaml
@@ -8,13 +8,13 @@ on:
 jobs:
   build:
   runs-on: ubuntu-latest
-  #if: "contains(github.event.head_commit.message, 'initial commit')"
+  if: "contains(github.event.head_commit.message, 'initial commit')"
   steps:
-    - uses: actions/checkout@v2
-    - uses: r-lib/actions/setup-r@v1
-    - name: Install packages
-      run:
-        Rscript -e "install.packages(c('tidyverse', 'plotly', 'RSocrata'))"
+    #- uses: actions/checkout@v2
+    #- uses: r-lib/actions/setup-r@v1
+    #- name: Install packages
+      #run:
+        #Rscript -e "install.packages(c('tidyverse', 'plotly', 'RSocrata'))"
     - name: Render index.html
       uses: lc5415/rmarkdown-action@v1
       with: 
