--- a/.github/workflows/covid_dist.yaml
+++ b/.github/workflows/covid_dist.yaml
@@ -13,8 +13,8 @@ jobs:
     #- uses: actions/checkout@v2
     #- uses: r-lib/actions/setup-r@v1
     #- name: Install packages
-      #run:
-        #Rscript -e "install.packages(c('tidyverse', 'plotly', 'RSocrata'))"
+      run:
+        Rscript -e "install.packages(c('tidyverse', 'plotly', 'RSocrata'))"
     - name: Render index.html
       uses: lc5415/rmarkdown-action@v1
       with: 
